--- a/New_newTests/New_newTests.csproj
+++ b/New_newTests/New_newTests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>10</LangVersion>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
